sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:5: error: not found: value pluPetit
    while ((j>=1)&&(pluPetit(j,j-1))){
                    ^